[gd_scene load_steps=9 format=3 uid="uid://ddchlkvknfhom"]

[ext_resource type="Script" path="res://Scripts/Entities/NPC.gd" id="1_hqdwn"]
[ext_resource type="AudioStream" uid="uid://cbcdekd78pkab" path="res://Assets/Audio/SFX/step.mp3" id="2_r3kkd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c8kxg"]
height = 2.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3imdy"]
points = PackedVector3Array(0.442345, 0.929704, 0.144677, -0.482881, -0.847055, -0.0775678, -0.4433, -0.878462, -0.186914, 0.368455, -1.0052, 0.219448, -0.224021, 0.843477, 0.436137, 0.0697525, 0.848449, -0.483669, 0.324375, -0.83916, -0.368908, -0.413476, 1.00479, -0.115583, -0.114496, -0.847682, 0.475299, 0.177034, 0.724351, 0.467026, -0.186915, -0.878466, -0.443301, -0.156075, -1.21769, -0.0800219, 0.471614, 0.804503, -0.150144, 0.148588, 1.22129, 0.0723101, -0.441745, -0.839014, 0.21492, -0.292173, 0.792588, -0.400411, -0.477947, 0.765479, 0.141714, 0.473793, -0.808189, 0.142877, 0.3536, -0.714927, 0.3536, 0.108988, 1.1299, -0.305248, 0.441025, -0.926955, -0.152174, 0.0697521, -0.848445, -0.483667, 0.28668, 0.799308, -0.403772, -0.476972, 0.727443, -0.149351, 0.146497, -1.16704, -0.229857, -0.0801905, -1.22039, 0.148476, -0.11728, 1.13346, 0.298261, 0.106856, -0.849957, 0.476586, 0.397718, 0.83967, 0.288049, -0.19221, 1.16774, -0.19221, -0.332568, -0.839815, 0.361256, 0.144601, 1.00353, 0.405024)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nmwl6"]
points = PackedVector3Array(0.442345, 0.929704, 0.144677, -0.482881, -0.847055, -0.0775678, -0.4433, -0.878462, -0.186914, 0.368455, -1.0052, 0.219448, -0.224021, 0.843477, 0.436137, 0.0697525, 0.848449, -0.483669, 0.324375, -0.83916, -0.368908, -0.413476, 1.00479, -0.115583, -0.114496, -0.847682, 0.475299, 0.177034, 0.724351, 0.467026, -0.186915, -0.878466, -0.443301, -0.156075, -1.21769, -0.0800219, 0.471614, 0.804503, -0.150144, 0.148588, 1.22129, 0.0723101, -0.441745, -0.839014, 0.21492, -0.292173, 0.792588, -0.400411, -0.477947, 0.765479, 0.141714, 0.473793, -0.808189, 0.142877, 0.3536, -0.714927, 0.3536, 0.108988, 1.1299, -0.305248, 0.441025, -0.926955, -0.152174, 0.0697521, -0.848445, -0.483667, 0.28668, 0.799308, -0.403772, -0.476972, 0.727443, -0.149351, 0.146497, -1.16704, -0.229857, -0.0801905, -1.22039, 0.148476, -0.11728, 1.13346, 0.298261, 0.106856, -0.849957, 0.476586, 0.397718, 0.83967, 0.288049, -0.19221, 1.16774, -0.19221, -0.332568, -0.839815, 0.361256, 0.144601, 1.00353, 0.405024)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cy8yg"]
albedo_color = Color(0.647059, 0.533333, 0.454902, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_mhxx6"]
material = SubResource("StandardMaterial3D_cy8yg")
top_radius = 0.05
bottom_radius = 0.05
height = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_oq1pw"]
size = Vector3(0.11, 0.7, 0.01)

[node name="NPC" type="RigidDynamicBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_hqdwn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_c8kxg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("ConvexPolygonShape3D_3imdy")

[node name="Footstep" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_r3kkd")
unit_db = 1.0
pitch_scale = 0.98
max_distance = 30.0

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
max_neighbors = 2

[node name="Area3D" type="Area3D" parent="."]
monitorable = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.2, 0, 0, 0, 0.462, 0, 0, 0, 1.2, 0, 0.5, 0)
shape = SubResource("ConvexPolygonShape3D_nmwl6")

[node name="Eye" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="RayCast3D" type="RayCast3D" parent="Eye"]
target_position = Vector3(50, 0, 3)

[node name="RayCast3D5" type="RayCast3D" parent="Eye"]
target_position = Vector3(50, 0, -3)

[node name="RayCast3D2" type="RayCast3D" parent="Eye"]
target_position = Vector3(50, 5, 0)

[node name="RayCast3D3" type="RayCast3D" parent="Eye"]
target_position = Vector3(50, -5, 0)

[node name="RayCast3D4" type="RayCast3D" parent="Eye"]
target_position = Vector3(50, 0, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Knife" type="Node3D" parent="."]

[node name="Handle" type="MeshInstance3D" parent="Knife"]
transform = Transform3D(3.66083e-08, 0.837499, -0.546438, 1, -4.37114e-08, 0, -2.38856e-08, -0.546438, -0.837499, 0.257266, 0.457362, 0.547835)
mesh = SubResource("CylinderMesh_mhxx6")
skeleton = NodePath("../..")

[node name="Blade" type="MeshInstance3D" parent="Knife/Handle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.357849, 0)
mesh = SubResource("BoxMesh_oq1pw")

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
